prevent session table from overflowing page

--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.scss
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.scss
@@ -9,3 +9,8 @@
 .form-number-input {
     width: 100px;
 }
+
+#exam-session-table-wrapper {
+    max-width: 100%;
+    overflow-x: auto;
+}
